2011-09-27  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V00-16-13 (12 used by e ulisse for compiler compat)
	* hopefully fix handling of oversize or otherwise corrupt events

2011-06-08  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V00-16-11
	* fix bug in discard at end of run

2011-05-20  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V00-16-10
	* ooops
	
2011-05-20  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V00-16-09
	* fix small event state inconsistency appearing as rare 
	assert failure in "STOPPING"
	
2011-05-11  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V00-16-08
	* added USEDLS to tag discarded EOL events
	* added counters to monitor EOL messages
	* out of sequence EOL messages generate warning
	* large skipped EOL interval bring to failed state

2011-04-15  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V00-16-07
	* include LUMISECTION in state chart
	
2011-04-13  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V00-16-06
	* fix stopping when all clients are dead

2011-04-01  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V00-16-05
	* yet small improvement to dqm diagnostic
	
2011-04-01  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V00-16-04
	* acceptDQMdiscard flag now counting 
	* moved flag for discard after sent for dqm cells
	* added timeout on send for dqm cells
	
2011-03-21  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V00-16-03
	* split spurious dqm discard message and demote one cat to WARN

2011-02-04  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V00-16-02
	* remove crash due to segv in FUResourceTable destructor 
	
2011-01-21  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V00-16-01
	* 15-10 fix typo in message

2011-01-19  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V00-16-00
	* 15-10 migration to xml buildfile
	* 16-00 further improvement to stop handling
	
2010-10-13  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V00-15-09
	* added emergencyStop function to handle stuck EP processes holding on to Shmem